# pytfcreds

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  dodo.py  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  regression.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/pytfcreds/: __init__.py  cli.py  exceptions.py  pytfcreds.py
tests/: __init__.py  test_pytfcreds.py
